--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferResults.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/LocalOfferResults.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "{latitude:double}/{longitude:double}"
-@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.LocalOfferResultsModel
+@model LocalOfferResultsModel
 @{
 }
 
