--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/Shared/_Header.cshtml
@@ -1,5 +1,4 @@
-﻿@using FamilyHubs.ServiceDirectoryAdminUi.Ui.Models.Links
-<header class="govuk-header app-header" role="banner" data-module="govuk-header">
+﻿<header class="govuk-header app-header" role="banner" data-module="govuk-header">
     <div class="govuk-header__container">
         <div class="govuk-width-container">
             <div class="govuk-header__logo">
