--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/FindServiceFromPostcode.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/FindServiceFromPostcode.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.FindServiceFromPostcodeModel
+@model FindServiceFromPostcodeModel
 @{
 }
 
