--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/InPersonWhere.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.InPersonWhereModel
-@using static FamilyHubs.ServiceDirectoryAdminUi.Ui.Infrastructure.Configuration.PageConfiguration;
+@model InPersonWhereModel
+@using static Infrastructure.Configuration.PageConfiguration;
 
 @{
     if (Model.UserFlow == "ManageService" && Model.LastPage == CheckServiceDetailsPageName)
@@ -81,14 +81,14 @@
                                     </p>
                                 }
                             }
-                            <input class="govuk-input @(Model.Address1Valid == false ? "govuk-input--error" : "")" id="Address_1" data-testid="address-one" name="Address_1" type="text" value="@Model.Address_1" autocomplete="Address_1" maxlength="256">
+                            <input class="govuk-input @(Model.Address1Valid == false ? "govuk-input--error" : "")" id="Address_1" data-testid="address-one" name="Address_1" type="text" value="@Model.Address1" autocomplete="Address_1" maxlength="256">
                         </div>
 
                         <div class="govuk-form-group">
                             <label class="govuk-label" for="Address_2">
                                 Address line 2 (optional)
                             </label>
-                            <input class="govuk-input" id="Address_2" name="Address_2" type="text" value="@Model.Address_2" data-testid="address-two" autocomplete="Address_2" maxlength="256">
+                            <input class="govuk-input" id="Address_2" name="Address_2" type="text" value="@Model.Address2" data-testid="address-two" autocomplete="Address_2" maxlength="256">
                         </div>
 
                         <div class="govuk-form-group @(Model.TownCityValid == false ? "govuk-form-group--error" : "")">
@@ -110,7 +110,7 @@
                             <label class="govuk-label" for="State_province">
                                 County (optional)
                             </label>
-                            <input class="govuk-input govuk-!-width-two-thirds" id="State_province" name="State_province" type="text" value="@Model.State_province" autocomplete="State_province" maxlength="256">
+                            <input class="govuk-input govuk-!-width-two-thirds" id="State_province" name="State_province" type="text" value="@Model.StateProvince" autocomplete="State_province" maxlength="256">
                         </div>
 
                         <div class="govuk-form-group @(Model.PostcodeValid == false ? "govuk-form-group--error" : "")">
@@ -125,7 +125,7 @@
                                     </p>
                                 }
                             }
-                            <input class="govuk-input govuk-input--width-10 @(Model.PostcodeValid == false ? "govuk-input--error" : "")" id="Postal_code" name="Postal_code" type="text" value="@Model.Postal_code" data-testid="post-code" autocomplete="Postal_code">
+                            <input class="govuk-input govuk-input--width-10 @(Model.PostcodeValid == false ? "govuk-input--error" : "")" id="Postal_code" name="Postal_code" type="text" value="@Model.PostalCode" data-testid="post-code" autocomplete="Postal_code">
                         </div>
                     </fieldset>
                 </div>
