--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/ViewServices.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model FamilyHubs.ServiceDirectoryAdminUi.Ui.Pages.OrganisationAdmin.ViewServicesModel
+@model ViewServicesModel
 @{
 }
 
@@ -27,12 +27,12 @@
                     </tr>
                 </thead>
                 <tbody class="govuk-table__body">
-                    @for (int i = 0; i < @Model.Services.Count; i++)
+                    @for (var i = 0; i < Model.Services.Count; i++)
                      {
-                        var item = @Model.Services[i];
+                        var item = Model.Services[i];
                         <tr class="govuk-table__row">
-                            @if(@item.ServiceType.Id == "1"){<td class="govuk-table__cell" >IS</td>}
-                            @if(@item.ServiceType.Id == "2"){<td class="govuk-table__cell" >FX</td>}
+                            @if(item.ServiceType.Id == "1"){<td class="govuk-table__cell" >IS</td>}
+                            @if(item.ServiceType.Id == "2"){<td class="govuk-table__cell" >FX</td>}
                             <td class="govuk-table__cell" data-testid=@item.Name.ToLower().Replace(" ", "")>@item.Name</td>
                             <td class="govuk-table__cell" style="text-align: right">
                                 <a asp-page-handler="RedirectToDetailsPage" asp-route-orgId="@Model.OrganisationViewModel.Id.ToString()" asp-route-serviceid="@item.Id" class="govuk-!-margin-right-1" data-testid=@item.Name.ToLower().Replace(" ", "")-view >View</a>
