--- a/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectoryAdminUi.Ui/Pages/OrganisationAdmin/CheckServiceDetails.cshtml
@@ -244,18 +244,15 @@
                             Sub-category
                         </dt>
                         <dd class="govuk-summary-list__value">
+                            <ul class="govuk-list govuk-list--bullet govuk-body-s">
                             @for (int i = 0, j = 0; i < Model.SelectedTaxonomy.Count(); i++)
                             {
                                 if (!string.IsNullOrEmpty(Model.SelectedTaxonomy[i].Parent))
                                 {
-                                    if (j++ > 0)
-                                    {
-                                        <span>&#44;&nbsp;</span>
-                                    }
-                                    @Model.SelectedTaxonomy[i].Name
-                                    ;
+                                    <li>@Model.SelectedTaxonomy[i].Name</li>
                                 }
                             }
+                            </ul>
                         </dd>
                     </div>
 
