--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/index.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-
+@{
+    ViewData["Title"] = "Add a service to the local support directory";
+}
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
