fix page titles

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/Index.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
-@ViewData["Title"] = "Sorry, there is a problem with the service";
+@{
+    ViewData["Title"] = "Sorry, there is a problem with the service";   
+}
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
