--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ListOrganisations.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ListOrganisations.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.OrganisationAdmin.ListOrganisationsModel
-
+@{
+    ViewData["Title"] = "List Organisations";
+}
 <style>
     fieldset br {
         display: none;
