--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/404.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Error/404.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
-@ViewData["Title"] = "Page not found";
+@{
+    ViewData["Title"] = "Page not found";   
+}
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
