--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ContactDetails.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ContactDetails.cshtml
@@ -2,7 +2,9 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using static Core.Constants.PageConfiguration;
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.OrganisationAdmin.ContactDetailsModel
-
+@{
+    ViewData["Title"] = "Contact Details";
+}
 @if (Model.UserFlow == "ManageService" && Model.LastPage == CheckServiceDetailsPageName)
 {
     <a asp-page="/OrganisationAdmin/CheckServiceDetails" class="govuk-back-link">Back</a>
