--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ErrorService.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/ErrorService.cshtml
@@ -1,7 +1,9 @@
 ﻿@page
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.OrganisationAdmin.ErrorServiceModel
-
+@{
+    ViewData["Title"] = "Error Service";
+}
 <main class="govuk-main-wrapper govuk-main-wrapper--auto-spacing" id="main-content" role="main">
     <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
