--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/TypeOfService.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/TypeOfService.cshtml
@@ -3,7 +3,9 @@
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using static Core.Constants.PageConfiguration;
-
+@{
+    ViewData["Title"] = "Type Of Service";
+}
 @if (Model.UserFlow == "ManageService" && Model.LastPage == CheckServiceDetailsPageName)
 {
     <a asp-page="/OrganisationAdmin/CheckServiceDetails" class="govuk-back-link" data-testid="button-back">Back</a>
