--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/WhatLanguage.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/OrganisationAdmin/WhatLanguage.cshtml
@@ -2,7 +2,9 @@
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.OrganisationAdmin.WhatLanguageModel
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using static Core.Constants.PageConfiguration;
-
+@{
+    ViewData["Title"] = "What Language";
+}
 @if (Model.UserFlow == "ManageService" && Model.LastPage == CheckServiceDetailsPageName)
 {
     <a asp-page="/OrganisationAdmin/CheckServiceDetails" class="govuk-back-link">Back</a>
